--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Dependencies Example
+name: Build Example
 
 on: 
   workflow_dispatch
@@ -11,10 +11,18 @@ jobs:
          uses: actions/checkout@v5.0.0
          with:
            repository: kowakawo/calculator-app-finished
-       - name: NPM framework set up 
+       - name: Setup Node.js environment
          uses: actions/setup-node@v6.0.0
-       - name: List contents
-         run: ls -alhR
+       - name: Install dependencies
+         run: npm ci
+       - name: Build the code
+         run: npm run build --if-present
+       
+    
+       
+        
+       
+         
            
          
     
