--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
        - name: Setup Node.js environment
          uses: actions/setup-node@v6.0.0
        - name: Install dependencies
-         run: npm ci
+         run: npm install
        - name: Build the code
          run: npm run build --if-present
        
