--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
          run: npm install
        - name: Build the code
          run: npm run build --if-present
+       - name: Run test
+         run: npm test
        
     
        
