--- a/.github/workflows/testreporter.yml
+++ b/.github/workflows/testreporter.yml
@@ -23,7 +23,7 @@ jobs:
          uses: dorny/test-reporter@v1.9.1
          with: 
            name: Jest tests
-           path: coverage/clover.xml
+           path: reports/junit.xml
            reporter: jest-junit
          
          
