Configure GitHub token for test reporter
Added GitHub token configuration for test reporter action.

--- a/.github/workflows/testreporter.yml
+++ b/.github/workflows/testreporter.yml
@@ -21,6 +21,7 @@ jobs:
          run: npm test -- --coverage
        - name: Test Reporter
          uses: mridang/action-test-reporter@v1.3.0
-         
-         
-    
+         with:
+    # GitHub token used to authenticate API requests. Required for checking status checks and publishing releases. Use `secrets.GITHUB_TOKEN` or a PAT with elevated scopes if needed.
+           github-token: ${{secrets.GITHUB_TOKEN}}
+  
