--- a/.github/workflows/testreporter.yml
+++ b/.github/workflows/testreporter.yml
@@ -24,4 +24,5 @@ jobs:
          with:
     # GitHub token used to authenticate API requests. Required for checking status checks and publishing releases. Use `secrets.GITHUB_TOKEN` or a PAT with elevated scopes if needed.
            github-token: ${{secrets.GITHUB_TOKEN}}
+           coverage-file: true
   
