Update test command to output coverage report
Redirect test coverage output to jest.xml for better reporting.

--- a/.github/workflows/testreporter.yml
+++ b/.github/workflows/testreporter.yml
@@ -18,11 +18,22 @@ jobs:
        - name: Build the code
          run: npm run build --if-present
        - name: Run test
-         run: npm test -- --coverage
-       - name: Test Reporter
+         run: npm test -- --coverage > build/reports/jest.xml
+       - name: Better Test Reports Action
+
          uses: mridang/action-test-reporter@v1.3.0
          with:
     # GitHub token used to authenticate API requests. Required for checking status checks and publishing releases. Use `secrets.GITHUB_TOKEN` or a PAT with elevated scopes if needed.
+
            github-token: ${{secrets.GITHUB_TOKEN}}
-           coverage-file: true
-  
+    # The directory where your project is located, used as the base for making file paths in the report relative.
+
+           working-directory: .
+    # The path to the single code coverage report file you want to parse (e.g., 'build/reports/clover.xml').
+
+           coverage-file: build/reports/clover.xml
+    # Set to `true` to upload the generated coverage report as a workflow artifact. If omitted or left empty, this defaults to `true`. Set to `false` to disable artifact upload.
+
+   
+          
+      
