--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -63,8 +63,8 @@ jobs:
         uses: docker/scout-action@v1
         with:
           command: compare
-          image: ${{ steps.meta.outputs.tags }}
-          to: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.COMPARE_TAG }}
+          image: ${{ vars.DOCKERHUB_USERNAME }}/app@${{ steps.build.outputs.digest }}
+          to: docker.io/${{ vars.DOCKERHUB_USERNAME }}/app:latest
           ignore-unchanged: true
           only-severities: critical,high
           write-comment: true
