Add steps for Node.js setup and dependency installation

--- a/.github/workflows/ex4.yml
+++ b/.github/workflows/ex4.yml
@@ -35,6 +35,15 @@ jobs:
   code-quality:
     runs-on: ubuntu-latest
     steps: 
+      - name: Checkout
+        uses: actions/checkout@v5.0.0
+        with:
+          repository: PXL-2TIN-DevOps-Resources/calculator-app-finished
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v6.0.0
+      - name: Dependency installation
+        run: npm install   
+        
       - name: linting
         run: npm run lint
       - name: check code with prettier
