--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -15,4 +15,4 @@ jobs:
           script: |
             sudo docker pull kowakawo/app
             sudo docker stop $(docker ps -q) || echo "There are no containers active"
-            sudo docker run -p -d 80:3000 kowakawo/app
+            sudo docker run -d -p 80:3000 kowakawo/app
