--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "express": "^4.17.1"
   },
-   "devDependencies": {
+  "devDependencies": {
     "@eslint/js": "^9.37.0",
+    "@playwright/test": "^1.57.0",
+    "@types/node": "^25.0.3",
     "eslint": "^9.37.0",
     "globals": "^16.4.0",
     "jest": "^27.0.6",
