--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Run integration tests
       uses: matt-ball/newman-action@master
       with:
-        collection: api-testcollection.postman_collection.json
+        collection: ./tests/integration/api-testcollection.postman_collection.json
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v4
