--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         collection: ./tests/integration/api-testcollection.postman_collection.json
     - name: Run Playwright tests
-      run: npx playwright test
+      run: npx playwright test --debug
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
